Going to push to Heroku and Git

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     {{content-for "body"}}
+    <p> First ember App deployed in cloud </p>
 
     <script src="assets/vendor.js"></script>
     <script src="assets/peepchat.js"></script>
